# hypr-auto-wallpaper

./: Cargo.toml
src/: main.rs
