[package]
name = "hypr-auto-wallpaper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
chrono = { version = "0.4.39", default-features = false, features = ["clock"] }
hyprland = { path = "../hyprland-rs" }
tokio = { version = "1.43.0", default-features = false, features = ["rt", "time", "net", "macros", "io-util"] }
xdg = "2.5.2"
